Change log for Defense Condition game project

Author(s): Ray Gardener (support@daylongraphics.com)
Repository: https://github.com/RayOfDaylon/Defcon
September 26, 2023


Pressing 'I' toggles invincibility.
Still need to implement.

Added double guns and invincibility readouts to Status panel.
Still need to get their values to drop over time.

Restored smart bomb radius factor to 1.0.
0.75 was feasible but it just didn't feel fun/cool enough sometimes.

Moved CMaterializationTask from DefconPlayViewBase.cpp to materialization.h/.cpp.

Moved player ship destruction types from DefconPlayViewBase.cpp to playership.h/.cpp.

Moved Particle and ParticleGroups types to new file Common/ParticleGroup.h

Moved HasFlag template function to Daylon namespace in util_core.h.

Added IGameObject::MakeBullet method to abstract which bullet class a game object shoots.

Label of humans readout flashes when abductions are happening.

"Abduction in progress" messages removed except for last human.

Shield readout bar made thinner to match other readouts.

Renamed DURATION_IMPORTANT_MESSAGE to MESSAGE_DURATION_IMPORTANT 
and made it a preference. Added MESSAGE_DURATION preference 
for normal messages.

Pressing 'O' (not zero) will toggle double guns mode. 
When active, pressing Space will fire two laser bolts 
instead of one.

Game match stats track single vs. double shots.

Details page for pod includes notes on pod intersection.

#include fix for non-Unity build.

Game object IDs are generated by IMission instead of using static vars.
IMission ctor resets next ID to zero.

Synced to plugin to fix build issues.

Rebased Defcon mediator class to use Daylon::TFastMessageMediator 
to get a little performance boost (although negligible at this point 
since we don't have many message IDs).

Smartbomb readout uses graphic bar (arcade match) instead of digit.

Human status readout consumes HumanCount messages directly 
instead of parent status widget doing it on its behalf.
